--- a/config.toml
+++ b/config.toml
@@ -1,39 +1,39 @@
-# baseURL = "https://your_domain.com/"
+baseURL = "https://links.apsweb.design/"
 languageCode = "en"
 defaultContentLanguage = "en"
 
 title = "Lynx"
-# copyright = "Copy, _right?_ :thinking_face:"
+copyright = "Copy, _right?_ :thinking_face:"
 
 enableEmoji = true
 disableKinds = ["taxonomy", "term"]
 
 [author]
-  # name = "Your name here"
-  # image = "img/author.jpg"  # path relative to static directory
+  name = "Amresh Prasad Sinha"
+  image = "https://avatars.githubusercontent.com/u/35039730?s=400&u=9c82b66c6ae7707420d5532683e2fc6ab40bdbb3&v=4"  # path relative to static directory
 
   links = [
-    # { email = "mailto:hello@your_domain.com" },
-    # { link = "https://link-to-some-website.com/" },
+    { email = "mailto:theamresh.sinha@gmail.com" },
+    { link = "https://apsweb.design" },
     # { amazon = "https://www.amazon.com/hz/wishlist/ls/wishlist-id" },
     # { apple = "https://www.apple.com" },
     # { codepen = "https://codepen.io/username" },
-    # { dev = "https://dev.to/username" },
+    { dev = "https://dev.to/amreshsinha" },
     # { discord = "https://discord.gg/invitecode" },
     # { dribbble = "https://dribbble.com/username" },
     # { facebook = "https://facebook.com/username" },
     # { flickr = "https://www.flickr.com/photos/username/" },
     # { foursquare = "https://foursquare.com/username" },
-    # { github = "https://github.com/username" },
+    { github = "https://github.com/AmreshSinha" },
     # { gitlab = "https://gitlab.com/username" },
     # { google = "https://www.google.com/" },
     # { instagram = "https://instagram.com/username" },
     # { keybase = "https://keybase.io/username" },
     # { kickstarter = "https://www.kickstarter.com/profile/username" },
     # { lastfm = "https://lastfm.com/user/username" },
-    # { linkedin = "https://linkedin.com/in/username" },
+    { linkedin = "https://linkedin.com/in/aps-amresh" },
     # { mastodon = "https://mastodon.instance/@username" },
-    # { medium = "https://medium.com/username" },
+    { medium = "https://aps09.medium.com" },
     # { microsoft = "https://www.microsoft.com/" },
     # { patreon = "https://www.patreon.com/username" },
     # { pinterest = "https://pinterest.com/username" },
