--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ baseURL = "https://links.apsweb.design/"
 languageCode = "en"
 defaultContentLanguage = "en"
 
-title = "Lynx"
+title = "Amresh's Links"
 copyright = "Copy, _right?_ :thinking_face:"
 
 enableEmoji = true
